--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -17,8 +17,11 @@
 
 <resources>
     <color name="photo_placeholder">#ccc</color>
-    <color name="colorPrimary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
     <color name="ltgray">#ffe0e0e0</color>
+
+    <color name="colorPrimary">#263238</color>
+    <color name="colorPrimaryDark">#000a12</color>
+    <color name="colorAccent">#FF5252</color>
+    <color name="colorBackground">#ffffff</color>
+
 </resources>
