--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -22,6 +22,6 @@
     <color name="colorPrimary">#263238</color>
     <color name="colorPrimaryDark">#000a12</color>
     <color name="colorAccent">#FF5252</color>
-    <color name="colorBackground">#ffffff</color>
+    <color name="colorBackground">#ded9d9</color>
 
 </resources>
